# Curproject01

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_MANAGEMENT.md  README_QUICKSTART.md  README_STAGE_12.md  README_STAGE_13.md  README_STAGE_14.md  README_STAGE_15.md  README_STAGE_16.md  README_STAGE_17.md  README_STAGE_18.md  README_STAGE_19.md  README_STAGE_20.md  REQUIREMENTS.md  SLA_AGREEMENT.md  SUPPORT_RUNBOOK.md  nginx_main_config.conf  nginx_simple.conf  nginx_streamlit_config.conf  pyproject.toml  test_html_document_upload.py
.cursor/rules/: initial-descrin-russian.mdc  initial-file-texts-chatgpt5-20250824.mdc  initial-structure.mdc  project-initial-description.mdc  stages.mdc
.github/workflows/: build-and-deploy.yml  ci.yml
apps/: __init__.py
apps/api/: Dockerfile  README_STAGE_9.md  pyproject.toml  pytest.ini  requirements.txt  run_api.sh  run_tests.sh  test_auth.py  test_basic.py
apps/api/examples/: auth_examples.py
apps/api/src/: __init__.py  main.py  port_test.py  simple_test.py  test_api.py
apps/api/src/middleware/: __init__.py  auth.py  rate_limit.py
apps/api/src/routers/: __init__.py  answers.py  auth.py  chat.py  documents.py  feedback.py  monitoring.py  performance.py  search.py  webhooks.py
apps/api/src/schemas/: __init__.py  answers.py  auth.py  chat.py  common.py  documents.py  feedback.py  search.py  webhooks.py
apps/api/src/services/: __init__.py  alert_system.py  audit.py  auth.py  cache.py  data_export.py  database_optimizer.py  document_acl.py  document_service.py  embeddings.py  encryption.py  external_api.py  feedback_service.py  health_check.py  metrics_collector.py  performance_monitor.py  quality_monitor.py  rag_pipeline.py  rag_service.py  resource_monitor.py  search_service.py  vectorstore.py  webhook_service.py
apps/api/src/settings/: config.py
apps/api/src/tests/: conftest.py  test_coverage.py
apps/api/src/tests/e2e/: test_full_workflow.py
apps/api/src/tests/integration/: test_api_endpoints.py
apps/api/src/tests/load/: test_performance_load.py
apps/api/src/tests/unit/: test_cache_service.py  test_performance_monitor.py
apps/streamlit_app/: Dockerfile  README_STAGE_10.md  README_STAGE_11.md  requirements.txt  test_basic.py
apps/streamlit_app/src/: __init__.py  main.py
apps/streamlit_app/src/components/: __init__.py  auth.py  chat.py  document_preview.py  documents.py  export_manager.py  query_history.py  search.py  table_visualizer.py  upload.py  user_settings.py
configs/: __init__.py  app.toml
docs/admin-guide/: README.md
docs/api/: openapi.yaml
docs/examples/: README.md
docs/user-guide/: README.md
docs/video-tutorials/: README.md
infra/: __init__.py
infra/compose/: docker-compose.simple.yml  docker-compose.yml  env.example  env.local  env.local.backup
infra/db/clickhouse/init/: 00_schema.sql
infra/db/postgres/init/: 00_extensions.sql  01_users_and_dbs.sql  02_rag_app_schema.sql
infra/helm/rag-platform/: Chart.yaml  values.yaml
infra/helm/rag-platform/templates/: _helpers.tpl  api-deployment.yaml
infra/production/: docker-compose.prod.yml
infra/production/monitoring/: prometheus.yml
infra/production/monitoring/rules/: alerts.yml
infra/production/nginx/: nginx.prod.conf
infra/production/scaling/: docker-swarm.yml  k8s-autoscaling.yaml
infra/superset/: Dockerfile  requirements.txt  superset_config.py
infra/superset/bootstrap/: create_dashboards.py  init_all.py  init_superset.py  setup_user.py
pipelines/: __init__.py
pipelines/airflow/: Dockerfile  README.md  init_airflow.sh  requirements.txt  test_dags.py  test_new_dags.py
pipelines/airflow/dags/: ingest_documents_dag.py  process_and_index_dag.py  sync_clickhouse_metrics_dag.py  system_maintenance_dag.py
scripts/: __init__.py  backup_system.sh  demo.sh  deploy_local.sh  dev_start.sh  dev_stop.sh  health_check.sh  init_project.sh  restore_system.sh  run_tests.sh  start_services.sh  stop_services.sh
